// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSelectableListItem is rendered 1`] = `
<li
  aria-label="aria-label"
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem testClass1 testClass2 emotion-euiListItemLayout-isInteractive-euiTestCss"
  data-test-subj="test subject string"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props append 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
    <span
      class="euiListItemLayout__append euiSelectableListItem__append emotion-euiListItemLayout__append"
    >
      <span />
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions mixed 1`] = `
<li
  aria-checked="mixed"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="minus"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Mixed (indeterminate) option.
         
        To check this option for all, press Enter once.
         
        To exclude this option for all, press Enter twice.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions off 1`] = `
<li
  aria-checked="true"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="cross"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Excluded option.
         
        To uncheck this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions on 1`] = `
<li
  aria-checked="true"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="check"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
         
        To exclude this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & allowExclusions undefined 1`] = `
<li
  aria-checked="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        To check this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & searchable on 1`] = `
<li
  aria-selected="true"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="check"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
         
        To uncheck this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked & searchable undefined 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        To check this option, press Enter.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked mixed 1`] = `
<li
  aria-checked="mixed"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="minus"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Mixed (indeterminate) option.
         
        To check this option for all, press Enter once.
         
        To uncheck this option for all, press Enter twice.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked on 1`] = `
<li
  aria-selected="true"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive-isSelected"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="primary"
      data-euiicon-type="check"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    >
      <div
        class="emotion-euiScreenReaderOnly"
      >
        . 
        Checked option.
      </div>
    </span>
  </span>
</li>
`;

exports[`EuiSelectableListItem props checked undefined 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props disabled 1`] = `
<li
  aria-disabled="true"
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isDisabled"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="subdued"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props isFocused 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem euiSelectableListItem-isFocused emotion-euiListItemLayout-isInteractive-isFocused"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be custom 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props onFocusBadge can be true 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props prepend 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__prepend euiSelectableListItem__prepend emotion-euiListItemLayout__prepend"
    >
      <span />
    </span>
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props showIcons can be turned off 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props textWrap can be "wrap" 1`] = `
<li
  aria-selected="false"
  class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
  data-test-subj="euiListItemLayout"
  role="option"
>
  <span
    class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
  >
    <span
      class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
      color="text"
      data-euiicon-type="empty"
    />
    <span
      class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-wrap"
    />
  </span>
</li>
`;

exports[`EuiSelectableListItem props tooltip behavior on mouseover 1`] = `
<body
  class="euiBody-hasPortalContent"
>
  <div>
    <li
      aria-describedby="generated-id"
      aria-selected="false"
      class="euiListItemLayout euiSelectableListItem emotion-euiListItemLayout-isInteractive"
      data-test-subj="euiListItemLayout"
      role="option"
    >
      <span
        class="euiToolTipAnchor eui-fullWidth emotion-euiToolTipAnchor-inlineBlock"
        id="generated-id-wrapper"
      >
        <span
          aria-describedby="generated-id"
          class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
        >
          <span
            class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
            color="text"
            data-euiicon-type="empty"
          />
          <span
            class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
          >
            Item content
          </span>
        </span>
      </span>
    </li>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      class="euiToolTipPopover euiToolTip emotion-euiToolTip-top"
      data-position="top"
      data-test-subj="listItemToolTip"
      id="generated-id"
      position="top"
      role="tooltip"
      style="top: -16px; left: -10px;"
    >
      <div
        class="euiToolTip__title emotion-euiToolTip__title"
      >
        Test
      </div>
      <div
        class="euiToolTip__arrow emotion-euiToolTip__arrow-top"
        style="left: 3px; top: 100%;"
      />
      <div>
        I am a tooltip!
      </div>
    </div>
  </div>
</body>
`;

exports[`EuiSelectableListItem props tooltip behavior when isFocused 1`] = `
<body
  class="euiBody-hasPortalContent"
>
  <div>
    <li
      aria-describedby="generated-id"
      aria-selected="false"
      class="euiListItemLayout euiSelectableListItem euiSelectableListItem-isFocused emotion-euiListItemLayout-isInteractive-isFocused"
      data-test-subj="euiListItemLayout"
      role="option"
    >
      <span
        class="euiToolTipAnchor eui-fullWidth emotion-euiToolTipAnchor-inlineBlock"
        id="generated-id-wrapper"
      >
        <span
          aria-describedby="generated-id"
          class="euiListItemLayout__content euiSelectableListItem__content emotion-euiListItemLayout__content"
        >
          <span
            class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
            color="text"
            data-euiicon-type="empty"
          />
          <span
            class="euiListItemLayout__text euiSelectableListItem__text emotion-euiListItemLayout__text-truncate"
          >
            Item content
          </span>
        </span>
      </span>
    </li>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      class="euiToolTipPopover euiToolTip emotion-euiToolTip-top"
      data-position="top"
      data-test-subj="listItemToolTip"
      id="generated-id"
      position="top"
      role="tooltip"
      style="top: -16px; left: -10px;"
    >
      <div
        class="euiToolTip__title emotion-euiToolTip__title"
      >
        Test
      </div>
      <div
        class="euiToolTip__arrow emotion-euiToolTip__arrow-top"
        style="left: 3px; top: 100%;"
      />
      <div>
        I am a tooltip!
      </div>
    </div>
  </div>
</body>
`;
